[project]
name = "unprompted"
version = "0.1.0"
description = "Convert raw LLM output into fully structured projects on disk"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kuvam Sai Prakash", email = "prakashkuvvam@gmail.com" }
]
keywords = ["llm", "cli", "scaffold", "codegen", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
unprompted = "unprompted.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ✅ Correct modern uv syntax — NOT [tool.uv.dev-dependencies]
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unprompted"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]